[package]
name = "image_search"
version = "0.3.1"
edition = "2021"
license = "MIT"
keywords = ["google", "images", "image", "search"]
description = "A crate designed to search Google Images based on provided arguments."
repository = "https://www.github.com/jibble330/image_search"
homepage = "http://www.pseudoservices.com/gis"
readme = "README.md"
exclude = ["/misc"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = "0.11"
infer = "0.11"
glob = "0.3"
serde_json = "1"
futures = "0.3"

tokio = { version = "1", features = ["rt-multi-thread"], optional = true }

[features]
## Blocking enables fetching images synchronously.
blocking = ["reqwest/blocking", "tokio"]
