[package]
name = "image_search"
authors = ["Kestrel"]
version = "0.4.0"
edition = "2021"
license = "MIT"
categories = ["asynchronous", "network-programming", "web-programming"]
keywords = ["google", "image", "search", "async"]
description = "A crate designed to search Google Images based on provided arguments."
repository = "https://github.com/commonkestrel/image_search"
homepage = "https://pseudoservices.com/gis"
readme = "README.md"
exclude = ["/misc"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
glob = "0.3"
surf = { version = "2", default-features = false }
infer = "0.12"
futures = "0.3"
async-std = "1.12.0"
serde_json = "1"

[features]
default = ["hyper"]

curl   = ["surf/curl-client"]      ## Use curl (through isahc) as the HTTP backend
hyper  = ["surf/hyper-client"]     ## Use hyper as the HTTP backend (default)
wasm   = ["surf/wasm-client"]      ## Use window.fetch as the HTTP backend for WASM
h1     = ["surf/h1-client"]        ## Use async-h1 as the HTTP backend with native TLS for HTTPS
rustls = ["surf/h1-client-rustls"] ## Use async-h1 as the HTTP backend with rustls for HTTPS

blocking = [] ## Blocking enables fetching images synchronously.
